hphp/hack/test/typecheck/array_get_generic_lvalue_array_append.php.exp
File "array_get_generic_lvalue_array_append.php", line 9, characters 10-11:
Invalid return type (Typing[4110])
  File "array_get_generic_lvalue_array_append.php", line 7, characters 41-42:
  Expected `Tv`
  File "array_get_generic_lvalue_array_append.php", line 7, characters 18-30:
  But got `vec<mixed>`
